<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="@dimen/indexLogo_width"
            android:layout_height="@dimen/indexLogo_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/indexLogo_start"
            android:layout_marginTop="@dimen/indexLogo_top"
            android:layout_marginEnd="@dimen/indexLogo_end_potrait"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="@dimen/tab_width"
            android:layout_height="@dimen/tab_height"
            android:layout_below="@+id/logo_iv"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/tab_start"
            android:layout_marginTop="@dimen/tab_top"
            android:layout_marginEnd="@dimen/tab_end"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabIndicatorColor="@color/tab_indicator"
            app:tabIndicatorFullWidth="false"
            app:tabTextAppearance="@style/tabFontAppearance"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_in" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_up" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:layout_below="@+id/tab_layout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/view_start"
            android:layout_marginEnd="@dimen/view_end" />

    </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>